-bug#0002156: CDEF strings are not escaped before passed to rrdtool command
-bug#0002158: Minor changes to grammar of displayed messages
-bug#0002165: Using data input field in data source name (related to 2079 in 0.8.7i)
-bug#0002167: New poller hook poller_finishing 
-bug#0002174: poller_item.host_id has wrong type 
-bug#0002178: typo in include/global_form.php: Mimimum -> Minimum
-bug#0002182: When there is no suitable (unique) index, graphs are not shown in data query ordering on host leafs
-bug: Fix input validation on cli/api_device.php
-bug: Fix issue with data source template associate command line script inserting incorrect rra information
-bug: Fix minor display issue on data source pages
-bug: Fix minor issue with counting items in the poller_output table
-bug: Graph settings and settings check boxes do not allow unchecking to be saved
-bug: Fix minor issue with plugin library caused by non-session
-bug: Fix SQL error on data input save for non-templated graphs
-feature: Merge Plugin Architecture into Cacti

0.8.7i
-bug#0001963: Bandwidth summation "total in" and "total out" are always 0
-bug#0002040: ICMP ping errors for Windows 7 with PHP 5.3
-bug#0002062: Multiple security vulnerabilities
-bug#0002063: Multiple value poller output incorrectly interpreted as hexadecimal value
-bug#0002064: Removing "~" (tilde) by sanitize_uri() conflicts with Apache UserDir translation
-bug#0002066: Graph without host id "Notice: Undefined variable: host_id"
-bug#0002067: Custom time range filter not working 
-bug#0002068: Missing header include in analyze_database.php
-bug#0002071: MySQL table poller_item is dropped always when "Data Input Method" is changed or added.
-bug#0002079: Using input field of a script in graph title does not work 
-bug#0002080: Database password containing "@" does not connect
-bug#0002083: Adding a new users generates errors in apache logs
-bug#0002084: Incorrect normalization of hrStorageTable values over 2^31